examples/errors/b0001.sdm
module example <https://example.com/api> version "" is
  ; missing the version URI
end
